--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,18 +1,9 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "./index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/",
-        "methods":["GET", "HEAD", "PUT", "PATCH", "POST", "DELETE"],
-        "headers": {
-          "Access-Control-Allow-Origin": "*"}
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    { "src": "index.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "index.js" }
+  ]
+}
